fix: layout shift in accordion open/close

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,11 +5,9 @@
 @font-face {
   font-family: vazir;
   src: url("/Vazir.woff2");
+  font-variant: normal;
 }
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
-body {
-  font-family: vazir;
-}
 
 .always-en {
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -20,9 +18,13 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
 }
 * {
-  font-family: vazir, Inter, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif, vazir;
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
+    vazir;
+}
+*::placeholder {
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .fluid {
@@ -33,3 +35,15 @@ body {
   max-width: 1388px;
   margin: 0 auto;
 }
+
+html[dir="rtl"] {
+  * {
+    font-family: vazir, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+  }
+}
+// .always-fa {
+//   font-family: vazir, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+//     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
+// }
